# yamc-core

./: Cargo.toml
res/shaders/: default-vert.glsl  default.fs  default.vs  default.wgsl
src/: event_loop.rs  lib.rs  main.rs  render.rs  res.rs  world.rs
src/render/: context.rs  mod.rs  surface.rs  voxel.rs
src/render/voxel/: appearance.rs  buffer.rs  mesh.rs  mod.rs
src/world/: chunk.rs  coords.rs  mod.rs  voxel.rs
src/world/chunk/: voxel.rs
src/world/voxel/: array.rs  mod.rs  registry.rs
