[package]
name = "yamc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
wgpu = "0.12.0"
thiserror = "1.0.30"
log = "0.4.14"
pollster = "0.2.4"
enum-as-inner = "0.3.3"
ndarray = "0.15.4"